# dental-segmentator-custom

./: .gitignore  CLAUDE.md  README.md  design.md  progress.md  pyproject.toml  requirements.md  task.md
config/: default.yaml
src/: __init__.py  exceptions.py
src/cli/: main.py
src/config/: config_manager.py
src/database/: db_manager.py
src/engine/: processing_engine.py
src/generators/: stl_generator.py
src/processors/: dicom_processor.py
src/segmentation/: nnunet_segmentator.py
src/utils/: gpu_manager.py  logging_manager.py
tests/: test_config_manager.py  test_db_manager.py  test_gpu_manager.py  test_logging_manager.py  test_nnunet_segmentator.py  test_processing_engine.py  test_stl_generator.py
